--- a/src/main.css
+++ b/src/main.css
@@ -59,7 +59,7 @@ h3 {
     box-shadow: 0 3px 0 6px var(--violet);
     border-radius: 20px;
     font-family: var(--articulat);
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: 700;
     padding: 15px 30px;
     /* display: inline-block; */
